--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i);
 
 
 
@@ -48,7 +49,7 @@ body {
   font-size: 2.4rem;
 }
 .display-7 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 1rem;
 }
 .display-7 > .mbr-iconfont {
@@ -644,7 +645,7 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 1rem;
   line-height: 1.43;
   min-height: 3.5em;
@@ -1759,7 +1760,7 @@ body {
 .cid-rsVSluLYJ7 {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #93d489;
+  background-color: #b2ccd2;
 }
 .cid-rsVSluLYJ7 .mbr-section-subtitle {
   color: #767676;
@@ -1835,41 +1836,25 @@ body {
 .cid-rsVSluLYJ7 .mbr-section-title {
   color: #ffffff;
 }
-.cid-rsuhS5XQrm {
+.cid-rsWZmKdUXp {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #f9f295;
+}
+.cid-rsWZmKdUXp .mbr-text {
+  color: #55b4d4;
+}
+.cid-rsX1pU8aCG {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-rsuhS5XQrm .counter-container {
+.cid-rsX1pU8aCG .mbr-text,
+.cid-rsX1pU8aCG blockquote {
   color: #767676;
 }
-.cid-rsuhS5XQrm .counter-container ol {
-  margin-bottom: 0;
-  counter-reset: myCounter;
-}
-.cid-rsuhS5XQrm .counter-container ol li {
-  margin-bottom: 1rem;
-}
-.cid-rsuhS5XQrm .counter-container ol li {
-  list-style: none;
-  padding-left: .5rem;
-}
-.cid-rsuhS5XQrm .counter-container ol li:before {
-  position: absolute;
-  left: 0px;
-  margin-top: -10px;
-  counter-increment: myCounter;
-  content: counter(myCounter);
-  display: inline-block;
+.cid-rsX1pU8aCG P {
   text-align: center;
-  margin: 5px 10px;
-  line-height: 40px;
-  transition: all .2s;
-  color: #ffffff;
-  background: #149dcc;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
 }
 .cid-rsCRTGTV1g {
   padding-top: 60px;
