create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1719,7 +1719,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qTkA127IK8 {
-  background-image: url("../../../assets/images/mbr-1-1920x1280.jpg");
+  background-image: url("../../../assets/images/action-athlete-barbell-841130-2000x1333.jpg");
 }
 .cid-rsVOc9YzBP {
   padding-top: 90px;
@@ -1855,6 +1855,26 @@ body {
 }
 .cid-rsX1pU8aCG P {
   text-align: center;
+}
+.cid-rsX3Pc8uIm {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rsX3Pc8uIm h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rsX3Pc8uIm p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rsX3Pc8uIm .card-img {
+  text-align: left;
+}
+.cid-rsX3Pc8uIm .card-img span {
+  font-size: 72px;
+  color: #707070;
 }
 .cid-rsCRTGTV1g {
   padding-top: 60px;
