--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1769,7 +1769,7 @@ body {
 .cid-rsVSluLYJ7 .mbr-content-text {
   color: #767676;
   margin-bottom: 0;
-  text-align: right;
+  text-align: left;
 }
 .cid-rsVSluLYJ7 .card {
   word-wrap: break-word;
